Fix navbar height spacing

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,7 @@
 $mice-font: 1rem;
 $nav-and-footer-font: 1.125rem;
-$navbar-height: 62px;
+// If you're putting text in the brand, it's 1.5rem plus 0.5 rem top and bottom padding.
+$navbar-height: 2.5rem;
 $max-width: 1440px;
 $paragraph-font: 1.375rem;
 $tertiary: #D181A5;
